plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.FoxThePrezident'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.FoxThePrezident.Main'
        )
    }
}
kotlin {
    jvmToolchain(17)
}